--- a/COPLEROS/style.css
+++ b/COPLEROS/style.css
@@ -14,7 +14,7 @@ border-radius: 70px;
     display:flex; 
   flex-direction: column;
   background-color: antiquewhite;
-  width: 50%;
+  width: 40%;
   margin: 150px;
   font-family: Verdana, Geneva, Tahoma, sans-serif
 }
@@ -28,6 +28,8 @@ flex-direction: row;
 
 
 .exterior {
+
+    padding: 30px; 
     width: 100%;
     background-color: lightskyblue;
 }
